chore(v5): removing the application logs